src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_URL__c</fullName>
        <label>Receipt URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <label>Visitor</label>
        <referenceTo>Visitor__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T{000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>